# fantasy_football

./: .gitignore  LICENSE  README.md  pyproject.toml  xgboost_optuna.ipynb
data/draft_picks/: draft_picks.parquet
data/fantasypros/: fantasypro_consensus_rankings.parquet
data/play_by_play/: play_by_play_2022.parquet
data/players/: players.parquet
data/weekly_rosters/: roster_weekly_2022.parquet
dbt/fantasy_football/: dbt_project.yml
dbt/fantasy_football/macros/: fantasy_points.sql  safe_divide.sql
dbt/fantasy_football/models/marts/core/: agg_player_career_stats.sql  agg_player_season_stats.sql  dim_fantasypros_consensus_rankings.sql  dim_games.sql  dim_players.sql  dim_rosters.sql  fct_player_game_stats.sql  int_play_by_play__get_player_games.sql
dbt/fantasy_football/models/staging/fantasypros/: src_fantasypros.yml  stg_fantasypros_consensus_rankings.sql
dbt/fantasy_football/models/staging/nflverse/: src_nflverse.yml  stg_efpa.sql  stg_play_by_play.sql  stg_play_by_play.yml  stg_players.sql  stg_rosters.sql
dbt/fantasy_football/seeds/: depth_charts_2021.csv  depth_charts_2021.xlsx  nflverse_to_fantasypros_mapping.csv  roster_2022.csv  timestamp.txt
fantasy_football/: get_fantasypros_data.py  get_nfl_data.py  scratch.ipynb  scratch.sql
tests/: test_fantasy_football.py
