[tool.poetry]
name = "fantasy_football"
version = "0.1.0"
description = ""
authors = ["brianlawrence2 <brianlawrence2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.5,<3.11"
duckdb = "^0.4.0"
pandas = "^1.4.3"
numpy = "^1.23.1"
requests = "^2.28.1"
pyarrow = "^8.0.0"
ipython-sql = "^0.4.1"
SQLAlchemy = "^1.4.39"
duckdb-engine = "^0.3.2"
pandas-gbq = "^0.17.8"
dbt-bigquery = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
